# autobot

./: .gitignore  README.md  autobot_main.bash  testlog.txt  waypoints-sim.json
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
maps/: UTIAS-1.pgm  UTIAS-1.yaml  UTIAS-2-sim.yaml  UTIAS-2.pgm  UTIAS-2.yaml  UTIAS-3.pgm  UTIAS-3.yaml  UTIAS-4.pgm  UTIAS-5.pgm  (+10 more)
src/rob1514_simulation/: CMakeLists.txt  README.md  package.xml
src/rob1514_simulation/launch/: simulation.launch
src/rob1514_simulation/models/qr_0/: model.config  model.sdf
src/rob1514_simulation/models/qr_1/: model.config  model.sdf
src/rob1514_simulation/models/qr_2/: model.config  model.sdf
src/rob1514_simulation/models/qr_3/: model.config  model.sdf
src/rob1514_simulation/models/qr_4/: model.config  model.sdf
src/rob1514_simulation/models/qr_5/: model.config  model.sdf
src/rob1514_simulation/models/qr_6/: model.config  model.sdf
src/rob1514_simulation/models/qr_7/: model.config  model.sdf
src/rob1514_simulation/models/qr_8/: Object.dae  model.config  model.sdf
src/rob1514_simulation/models/qr_a/: a.dae  model.config  model.sdf
src/rob1514_simulation/models/qr_hello/: hello.dae  model.config  model.sdf
src/rob1514_simulation/models/qr_is/: is.dae  model.config  model.sdf
src/rob1514_simulation/models/qr_test/: model.config  model.sdf  test.dae
src/rob1514_simulation/models/qr_this/: model.config  model.sdf  this.dae
src/rob1514_simulation/models/qr_world/: model.config  model.sdf  world.dae
src/rob1514_simulation/worlds/: competition.world  utias.world
(+44 files in other folders)
